# xiaoyou-core

./: .env.example  .gitignore  ARCHITECTURE_DIAGRAM.md  DOCUMENT_RESTRUCTURING_PLAN.md  DOCUMENT_REVIEW.md  LICENSE  PROJECT_TECHNICAL_REFERENCE.md  analyze_audio.py  app.py  app_main.py  captured_trace.json  check_versions.py  comprehensive_results.json  config.json  desktop_pet.py  find_large_files.py  main.py  md_to_format.py  multimodal_requirements.txt  multimodal_scheduler.py  nvidia_smi_snapshot.txt  pyproject.toml  readme.md  requirements.txt  run_llm_interactive.py  setup.py  start.py  start_pet.bat  start_server.py  start_services.bat  start_web.bat  test_asian_gen.py  test_chat_loop.py  test_coqui_tts_direct.py  test_emotion_diversity.py  test_nsfw_chat.py  test_pony_auto_prefix.py  test_pony_gen.py  test_tts_connection.py  test_tts_real.py  (+3 more)
.trae/documents/: mvp_core架构优化计划.md  xiaoyou-core 系统架构全面重构计划.md  xy-core系统架构文档更新计划.md  xy-core项目结构审查与文档更新计划.md  全面优化 paper.tex 与实验脚本实施方案.md  文档重构改进计划.md  深入冗余代码清理与统一重构计划.md  论文内容质量深度优化实施计划（paper.tex）.md  项目未使用文件清理计划.md  项目结构与论文报告审查与交付计划.md
android/: README.md  build.gradle  build_log.txt  local.properties
android/app/: build.gradle
app/: __init__.py  bootstrap.py
backup_venv/: venv_base_requirements.txt  venv_llm_requirements.txt  venv_models_requirements.txt  venv_tts_compat_requirements.txt
bots/: MIRAI_LOGIN_INSTRUCTIONS_UPDATED.txt  config.json  config.yml  manual_login_guide.txt  mirai_input.txt  qq_bot.py  qq_bot_config.json  quick_login.ps1  start_qq_bot.bat  troubleshoot_login.ps1  wx_bot.py
clients/android/: .gitignore  build.gradle  settings.gradle
clients/bots/: README_QQ_BOT.md  complete_verification.ps1  direct_login.ps1  install_sakura_solver.ps1  install_sakura_solver_mirror.ps1  move_sakura_plugin.ps1  protocol_login_guide.ps1  qq_bot_config.example.json  start_mirai.bat  start_mirai_interactive.bat  start_qq_bot_auto.bat  start_qq_bot_enhanced.bat  start_qq_bot_with_mirai.bat  verify_bot.ps1  verify_bot_status.ps1
clients/frontend/: package-lock.json  package.json
config/: __init__.py  asr_config.json  config.py  config_example.py  config_loader.py  config_watcher.py  integrated_config.py
config/yaml/: app.yaml  env.yaml
core/: README.md  async_cache.py  async_monitor.py  cache.py.bak  llm_connector.py  log_config.py  model_adapter.py  model_manifest.py  model_registry.py  resource_manager.py  stt_connector.py  text_infer.py  text_infer.py.bak  text_model_adapter.py  trm_adapter.py  utils.py  vector_search.py  vl_model_adapter.py
core/agents/: chat_agent.py
core/api/: contract.py  error_response.py
core/cache/: main.py
core/character/: aveline.py  (+1 more)
cpp_scheduler/: CMakeLists.txt  README.md  main.cpp
cpp_scheduler/api/: api_client.cpp  api_client.h  api_server.cpp  api_server.h  blackbox_integration_example.h
cpp_scheduler/config/: system_config.cpp  system_config.h
cpp_scheduler/core/: async_scheduler.cpp  async_scheduler.h  resource_isolation_scheduler.cpp  resource_isolation_scheduler.h
cpp_scheduler/docs/: DEPLOYMENT_GUIDE.md  api_reference.md  architecture_and_deployment.md
cpp_scheduler/monitoring/: resource_monitor.cpp  resource_monitor.h
cpp_scheduler/optimization/: performance_optimizer.cpp  performance_optimizer.h
cpp_scheduler/queue/: task_queue.cpp  task_queue.h
cpp_scheduler/tests/: CMakeLists.txt  integration_test.cpp  integration_test.h  system_integration_test.cpp  system_integration_test.h
cpp_scheduler/tests/integration/: resource_isolation_test.cpp  resource_isolation_test.h
cpp_scheduler/workers/: cpu_tts_worker.cpp  cpu_tts_worker.h  gpu_image_worker.cpp  gpu_image_worker.h  gpu_img_worker.cpp  gpu_img_worker.h  gpu_llm_worker.cpp  gpu_llm_worker.h  worker_base.cpp  worker_base.h
demo/: demo_multimodal.py  demo_new_models.py
docs/: APP_TECHNICAL_REFERENCE.md  CODE_STYLE_GUIDE.md  CONFIGURATION_GUIDE.md  DEPLOYMENT_GUIDE.md  GITHUB_GUIDE.md  MANUAL_INSTALL_GUIDE.md  MIGRATION_GUIDE.md  MODEL_DEPLOYMENT_GUIDE.md  PROJECT_STRUCTURE.md  QQ_ADAPTER_GUIDE.md  REFACTOR_DELIVERABLES.md  REQUIREMENTS_GUIDE.md  cache_implementation.md  cache_performance_report.md  comprehensive_cache_documentation.md  environments_guide.md
frontend/: tailwind.config.js
maintenance/: check_diffusers.py  check_imports.py  check_runtime.py
memory/: README_VECTOR_SEARCH.md  embedding_generator.py  emotion_responder.py  enhanced_memory_manager.py  enhanced_memory_system_design.md  long_term_db.py  memory_manager.py  nightly_processor.py  surprise_manager.py  topic_generator.py  vector_search_implementation_plan.md  weighted_memory_manager.py
multimodal/: __init__.py  image_gen.py  stt_connector.py  tts_manager.py
mvp_core/: .gitignore  LICENSE  README.md  config.py  environment.yml  main.py  nvidia_smi_snapshot.txt  requirements.txt
paper/: README.md  System_Architecture_and_Performance_Report.tex  comprehensive_experiment.py  comprehensive_results.json  generate_pdf_report.py  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  references.bib
requirements/: core.txt  dev.txt  models-cpu.txt  requirements.txt  voice.txt
reviews/: experiment_scripts_review.md
routers/: __init__.py  api_router.py  health_router.py  memory_router.py  session_router.py  study_router.py  user_router.py  websocket_router.py
runtime/: vapid.json
scripts/: analyze_prompt_components.py  debug_config.py  diagnose_chroma.py  download_asr_modelscope.py  download_audio_models.py  download_embedding_model.py  download_tts_modelscope.py  download_whisper_modelscope.py  ingest_knowledge.py  inspect_chroma.py  pytorch_install_commands.txt  refresh_forge_vae.py  run_local.bat  setup_env.ps1  test_api.py  test_gao_kao_tools.py  test_rag.py  test_retrieval_speed.py  verify_chat_agent_tools.py  verify_gguf_local.py
services/: fallback_service.py.bak
static/: script.js  style.css
templates/: error.html  ultimate_xiaoyou_optimized.html
tests/: test_cache.py  test_forge_integration.py  test_main_integration.py  test_real_image_gen.py
tools/: weight.json
voice/: tts_manager.py
(+347 files in other folders)
